--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -387,9 +387,91 @@
                     {{/if}} --}}
 
                     <td>
-                        <div class="delete_button">
+                        <div class="archive_button">
                             <a href="archive-ingredient/{{this.ingredient_id}}"
                                 class="btn waves-effect waves-light luluble-pink">Archive</a>
+                        </div>
+                    </td>
+
+                    <td>
+                        <div class="edit_button">
+                            <a href="#termss" class="btn waves-effect waves-light luluble-pink modal-trigger">Edit</a>
+                            <div class="modal" id="termss">
+                                <div style="padding: 5% 5% 5% 5%">
+                                    {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                    <h1 style="font-size:40px;">Edit Ingredient</h1>
+
+                                    <form method="POST" action="/inventoryformsubmit">
+                                        <article class="regular">
+                                            {{!-- <h2>Textbook</h2> --}}
+
+                                            {{!-- Field 1 --}}
+                                            <b><label for="tuluble">INCI Name:</label></b>
+                                            <input type="text" name = "userInput1" id="userInput1" value="{{this.inci_name}}" maxlength="200">
+                                            <p> </p>
+
+                                            {{!-- Field 2 --}}
+                                            <b><label for="tuluble">Trade Name:</label></b>
+                                            <input type="text" name = "userInput2" id="userInput2" value={{this.trade_name}} maxlength="200">
+                                            <p> </p>
+
+                                            {{!-- Field 3 --}}
+                                            <b><label for="tuluble">Amount Available:</label></b>
+                                            <input type="number" name = "userInput3" id="userInput3" value="{{this.amt}}" maxlength="200">
+                                            <p> </p>
+
+                                            {{!-- Field 4 --}}
+                                            <b><label for="tuluble">Shelf:</label></b>
+                                            <input type="text" name = "userInput4" id="userInput4" value={{this.shelf}} maxlength="20">
+                                            <p> </p>
+
+                                            <b><label for="tuluble">Classifier:</label></b>
+                                            {{!-- <input type="text" name = "userInput5" id="userInput5" placeholder="Enter Classifier" maxlength="20"> --}}
+                                            <select name="userInput5" id="userInput5" class="browser-default">
+                                                <option value={{this.classifier_id}} disabled selected>{{this.classifier_id}}</option>
+                                                <option value="Thickener">Thickeners</option>
+                                                <option value="Oils">Oils</option>
+                                                <option value="Butters">Butters</option>
+                                                <option value="Surfactants">Surfactants</option>
+                                                <option value="Functional-Active">Functional/Active</option>
+                                                <option value="Preservatives">Preservatives</option>
+                                                <option value="Extracts-Fragrances-Flavor">Extracts/Fragrances/Flavor</option>
+                                                <option value="Experimental">Experimental</option>
+                                                <option value="Colorants">Colorants</option>
+                                                <option value="Absorbents">Absorbents</option>
+                                                <option value="pH Adjusters (Acids)">pH Adjusters (Acids)</option>
+                                                <option value="pH Adjusters (Bases)">pH Adjusters (Bases)</option>
+                                                <option value="Distilled_Water-Ethyl_Alcohol">Distilled Water/Ethyl Alcohol</option>
+                                            </select>
+                                            <p> </p>
+                                            <p> &nbsp;</p>
+
+                                            <b><label for="tuluble">Lot Number:</label></b>
+                                            <input type="text" name = "userInput6" id="userInput6" value={{this.lot_num}} maxlength="20">
+                                            <p> </p>
+
+                                            <b><label for="tuluble">Date Recieved:</label></b>
+                                            <input type="date" name = "userInput7" id="userInput7" value={{this.date_recieved}} maxlength="20">
+                                            <p> </p>
+
+                                            <b><label for="tuluble">Supplier:</label></b>
+                                            <input type="text" name = "userInput8" id="userInput8" value={{this.supplier}} maxlength="20">
+                                            <p> </p>
+
+                                            <b><label for="tuluble">Unit:</label></b>
+                                            <input type="text" name = "userInput9" id="userInput9" value={{this.unit}} maxlength="20">
+                                            <p> </p>
+
+                                            <div class="finish_button">
+                                                <button id = "finish_button" type="submit">Finish Editing</button>
+                                                {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                            </div>
+                                            <p> </p>
+                                        </form>
+                                    </article>
+                                </div>
+                            </div>
+
                         </div>
                     </td>
 
@@ -399,6 +481,13 @@
         </table>
     </div>
     </div>
+
+
+    <script>
+        $(document).ready(function () {
+            $('.modal').modal();
+        })
+    </script>
 
 </body>
 
