--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -130,6 +130,10 @@
                             <input type="text" name = "userInput9" id="userInput9" placeholder="Enter Unit" maxlength="20">
                             <p> </p>
 
+                            <b><label for="tuluble">Link:</label></b>
+                            <input type="hyperlink" name = "userInput10" id="userInput10" placeholder="Enter Link" maxlength="100">
+                            <p> </p>
+
                             <div class="add_button">
                                 <button id = "add_button" type="submit">Add Ingredient</button>
                                 {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
@@ -194,6 +198,8 @@
                 var inputValue7 = $("#userInput7").val();
                 var inputValue8 = $("#userInput8").val();
                 var inputValue9 = $("#userInput9").val();
+                var inputValue10 = $("#userInput10").val();
+                
 
                 window.location = "/inventoryformsubmit";
                 //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
@@ -316,7 +322,15 @@
                     <th id = "shelf">Shelf
                         <span class="large material-icons">import_export</span>
                     </th>
-                    <th></th>
+                    <th id = "archive">Archive
+                        <span class="large material-icons">import_export</span>
+                    </th>
+                    <th id = "edit">Edit
+                        <span class="large material-icons">import_export</span>
+                    </th>
+                    <th id = "link">Link
+                        <span class="large material-icons">import_export</span>
+                    </th>
                 </tr>
             </thead>
             <tbody>
@@ -352,17 +366,11 @@
 
                                 <div class="col s12">&nbsp;</div>
                                 <div class="col s12 m6 l3">
-                                    <p></p>
-                                </div>
-                                <div class="col s12 m6 l3">
-                                    <p></p>
-                                </div>
-                                <div class="col s12 m6 l3">
-                                    <p></p>
                                     <div class="delete_button">
                                         <a href="" class="btn-small">Edit</a>
                                     </div>
                                 </div>
+                                
                                 <div class="col s12 m6 l3">
                                     <p></p>
                                     <div class="delete_button">
@@ -460,6 +468,10 @@
 
                                             <b><label for="tuluble">Unit:</label></b>
                                             <input type="text" name = "userInput9" id="userInput9" value={{this.unit}} maxlength="20">
+                                            <p> </p>
+
+                                            <b><label for="tuluble">Link:</label></b>
+                                            <input type="hyperlink" name = "userInput10" id="userInput10" value={{this.link}} maxlength="100">
                                             <p> </p>
 
                                             <div class="finish_button">
