--- a/views/projects.hbs
+++ b/views/projects.hbs
@@ -31,9 +31,9 @@
                             <div class="card-content white-text">
                                 {{!-- projects/{{this.project_name}} --}}
                                 <span class="card-title"><a style="color: black;"
-                                        href="/projects/{{this.project_id}}/trial1/trial1"><b>{{this.project_name}}</a></b></span>
-                                <p style="color: black;">Client: {{this.client}}</p>
-                                <p style="color: black;">{{this.date}}</p>
+                                        href="/projects/{{project_id}}/trial1/trial1"><b>{{project_name}}</a></b></span>
+                                <p style="color: black;">Client: {{client}}</p>
+                                <p style="color: black;">{{date}}</p>
                                 <div class="col s12">&nbsp;</div>
                                 <div class="row">
                                     <div class = "col s12 m4 l4">
@@ -43,7 +43,7 @@
                                     </div>
                                     <div class = "col s12 m4 l4">
                                         <div class="delete_button">
-                                            <a href="archive-project/{{this.project_id}}" class="btn waves-effect waves-light luluble-light-grey">Archive</a>
+                                            <a href="archive-project/{{project_id}}" class="btn waves-effect waves-light luluble-light-grey">Archive</a>
                                         </div>
                                     </div>
                                 </div>
@@ -51,17 +51,18 @@
                         </div>
                 </div>
                 {{!-- </a> --}}
-
+            {{/each}}
+            {{#each results}}
                 <div class="modal" id="term">
                     <div class="row">
                         <div class="col s12">&nbsp;</div>
-                        <div class="col s12"><b><font size="+2">{{this.project_name}}</font></b></div>
+                        <div class="col s12"><b><font size="+2">{{project_name}}</font></b></div>
                         <div class="col s12">&nbsp;</div>
                         <div class="col s6">
-                            <span><b>Client:</b> {{this.client}}<br></br><b>Date:</b> {{this.date}}</span>
+                            <span><b>Client:</b> {{client}}<br></br><b>Date:</b> {{date}}</span>
                         </div>
                         <div class="col s6">
-                            <span><b>Number of Formulas:</b> 3<br></br><b>Other: </b>Information</span>
+                            <span><b>Number of Formulas:</b>2<br></br><b>Other: </b>Information</span>
                         </div>
                         <div class="col s12">&nbsp;</div>
                         {{!-- <div class="col s12 m6 l3">
