--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -356,10 +356,10 @@
                 {{#each results}}
                 <tr>
                     <td>{{this.inci_name}}
-                        <a href="#terms" class="modal-trigger">
+                        <a href="#terms{{ingredient_id}}" class="modal-trigger">
                             <span class="large material-icons">info_outline</span>
                         </a>
-                        <div class="modal" id="terms">
+                        <div class="modal" id="terms{{ingredient_id}}">
                             <div class="row">
                                 <div class="col s12">&nbsp;</div>
                                 <div class="col s12"><b>
@@ -419,6 +419,7 @@
                         </div>
                     </td>
 
+                    
                     <td>
                         <div class="edit_button">
                             <a href="#termss" class="btn waves-effect waves-light luluble-pink modal-trigger">Edit</a>
