--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -51,8 +51,8 @@
 
                 {{#each results}}
                 <tr>
-                    <td>{{phase_num}}</td>
-                    <td>{{proc}}</td>
+                    <td contenteditable="true">{{phase_num}}</td>
+                    <td contenteditable="true">{{proc}}</td>
                     <td>{{comments}}</td>
                     <td>{{temp_init}}</td>
                     <td>{{temp_final}}</td>
@@ -63,8 +63,107 @@
                     <td>{{blade}}</td>
                 </tr>
                 {{/each}}
+                <tr>
+                    <div class="col s12 m4 l2">
+                        <a href="#openProc" class="btn waves-effect waves-light luluble-pink modal-trigger">Add</a>
+
+                        <div class="modal" id="openProc">
+                            <div style="padding: 5% 5% 5% 5%">
+                                {{!-- <b><span>Add a New Ingredient</span></b> --}}
+                                <h1 style="font-size:40px;">Add a New Step</h1>
+
+                                {{!-- somehow get the formula of the tab clicked on --}}
+                                {{#each procedure_info}}
+                                <form method="POST" action="/projects/{{project_id}}/procedure{{trial_num}}/procformsubmit">
+                                    <article class="regular">
+                                        {{!-- <h2>Textbook</h2> --}}
+
+                                        {{!-- Field 1 --}}
+                                        <b><label for="tuluble">Phase:</label></b>
+                                        <input type="number" name = "userInput1" id="userInput1" placeholder="Enter Phase Number" maxlength="20">
+                                        <p> </p>
+
+                                        {{!-- Field 2 --}}
+                                        <b><label for="tuluble">Procedure:</label></b>
+                                        <input type="text" name = "userInput2" id="userInput2" placeholder="Enter Procedure" maxlength="300">
+                                        <p> </p>
+
+                                        {{!-- Field 3 --}}
+                                        <b><label for="tuluble">Comments:</label></b>
+                                        <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Comments" maxlength="300">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Initial Temperature (C):</label></b>
+                                        <input type="number" name = "userInput4" id="userInput4" placeholder="Enter Initial Temperature" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Final Temperature (C):</label></b>
+                                        <input type="number" name = "userInput5" id="userInput5" placeholder="Enter Final Temperature" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Timing (min):</label></b>
+                                        <input type="text" name = "userInput6" id="userInput5" placeholder="Enter Timing" maxlength="45">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Initial Mixing (rpm):</label></b>
+                                        <input type="text" name = "userInput7" id="userInput5" placeholder="Enter Initial Mixing Speed" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Final Mixing (rpm):</label></b>
+                                        <input type="text" name = "userInput8" id="userInput5" placeholder="Enter Final Mixing Speed" maxlength="20">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Mixer Type:</label></b>
+                                        <input type="text" name = "userInput9" id="userInput5" placeholder="Enter Mixer Type" maxlength="45">
+                                        <p> </p>
+
+                                        <b><label for="tuluble">Blade:</label></b>
+                                        <input type="text" name = "userInput10" id="userInput5" placeholder="Enter Blade" maxlength="45">
+                                        <p> </p>
+
+                                        <div class="add_proc_button">
+                                            <button id = "add_proc_button" type="submit">Add Proc</button>
+                                            {{!-- <a id="add_button" class="btn waves-effect waves-light luluble-pink">Add Ingredient</a> --}}
+                                        </div>
+                                        <p> </p>
+                                    </form>
+                                    {{/each}}
+                                </article>
+                            </div>
+                        </div>
+                        </div>
+                </tr>
             </tbody>
         </table>
+
+        <script>
+            $(document).ready(function() {
+                $('.modal').modal();
+            });
+        </script>
+
+        <script>
+            $(document).ready(function() {
+                $("#add_proc_button").click(function() {
+                var inputValue1 = $("#userInput1").val();
+                var inputValue2 = $("#userInput2").val();
+                var inputValue3 = $("#userInput3").val();
+                var inputValue4 = $("#userInput4").val();
+                var inputValue5 = $("#userInput5").val();
+                var inputValue6 = $("#userInput6").val();
+                var inputValue7 = $("#userInput7").val();
+                var inputValue8 = $("#userInput8").val();
+                var inputValue9 = $("#userInput9").val();
+                var inputValue10 = $("#userInput10").val();
+
+                console.log("still in procedure");
+
+
+                window.location.href += "/procformsubmit";
+                //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
+                });
+            });
+        </script>
 
 
         
