--- a/views/procedure.hbs
+++ b/views/procedure.hbs
@@ -89,7 +89,7 @@
                                         <p> </p>
 
                                         {{!-- Field 3 --}}
-                                        <b><label for="tuluble">Comments:</label></b>
+                                        <b><label for="tuluble">Comments/Ingredients:</label></b>
                                         <input type="text" name = "userInput3" id="userInput3" placeholder="Enter Comments" maxlength="300">
                                         <p> </p>
 
