--- a/views/formulas.hbs
+++ b/views/formulas.hbs
@@ -457,10 +457,27 @@
                 </div>
                 </div>
 
+
                 <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
                 <script
                     src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-beta/js/materialize.min.js"> 
                 </script>
+
+                {{!-- <script>
+                        document.addEventListener('DOMContentLoaded', function() {
+                            console.log("HELLOOO");
+                            const inputField = document.querySelector('.autocomplete');
+                            M.autocomplete.init(inputField, {
+                                data:{
+                                    'Google': null, // null instead of images
+                                    'Yahoo': null,
+                                    'Youtube': null
+                                },
+                                limit:10,
+                                minlength:2
+                            });
+                        });
+                    </script> --}}
 
                     <script>
                         $(document).ready(function() {
