--- a/views/inventory.hbs
+++ b/views/inventory.hbs
@@ -69,7 +69,7 @@
                     {{!-- <b><span>Add a New Ingredient</span></b> --}}
                     <h1 style="font-size:40px;">Add a New Ingredient</h1>
 
-                    <form method="POST" action="/inventoryformsubmit">
+                    <form method="POST" action="/inventory/inventoryformsubmit">
                         <article class="regular">
                             {{!-- <h2>Textbook</h2> --}}
 
@@ -213,7 +213,7 @@
                 module.exports = {inputValue8};
                 module.exports = {inputValue9};
 
-                window.location = "/inventoryformsubmit";
+                window.location = "inventory/inventoryformsubmit";
                 //$(window).attr("location", "inventoryformsubmit/" + inputValue1);
                 });
             });
