index now shows user name

--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,7 +27,8 @@
             <div id="main" style="padding: 0% 2% 0% 2%">
             <!-- https://materializecss.com/cards.html -->
                 <center>            
-                    <h1 id="title" style="color:#e700a2">Welcome {user}!
+
+                    <h1 id="title" style="color:#e700a2">Welcome {{profileInfo}}!
                     {{!-- <p style="color:#fa82be" > </p> --}}
                         <span style= "col
                         or:#000000" class="large material-icons">local_florist
